--- a/app/views/signup/new.html.erb
+++ b/app/views/signup/new.html.erb
@@ -1,9 +1,20 @@
 <%= form_for(@signup, :url => {:action => "create"} ) do |f| %>
+    <div class="container">
+        <span class="sign_up_button">Sign Up</span>
+        <hr>
+          <% if flash[:notice] %>
+              <div class="alert alert-success">
+                <button class="close" data-dismiss="alert" type="button"> ×</button>
+                <p class="text-info"><%= flash[:notice] %></p>
+              </div>
+          <% end %>
 
-    <label>Email:</label>
-    <%= f.text_field :email %><br/>
-    <label>Zipcode:</label>
-    <%= f.text_field :zipcode%><br/>
-    <%= f.submit "Create" %>
+        <label>Email:</label>
+        <%= f.text_field :email %><br/>
 
+        <label>Zipcode:</label>
+        <%= f.text_field :zipcode%><br/>
+
+        <%= f.submit "Create",:class=>"btn btn-primary" %>
+    </div>
 <% end %>
